--- a/styles/style.css
+++ b/styles/style.css
@@ -39,8 +39,8 @@ blockquote {
 .header {
   display: flex;
   justify-content: space-between;
-  padding: 20px 20px 16px 20px;
-  }
+  padding: 24px 20px;
+}
 
 .header__menu-list {
   display: flex;
@@ -71,15 +71,15 @@ blockquote {
 
 .cover {
   background-image: url(../images/cover.svg);
-/*Путь переписал. Получилось*/
-  background-size: 95% auto;
+  /*Путь переписал. Получилось*/
+  background-size: 94% auto;
   background-repeat: no-repeat;
   background-position: right;
-  padding: 11px 20px 0 0;
+  min-height: 198px;
 }
 
 .cover__title {
-  padding: 7px 20px 35px 20px;
+  padding: 7px 24px 35px 20px;
   display: block;
   font-family: "EB Garamond", sans;
   font-size: 72px;
@@ -98,7 +98,6 @@ blockquote {
 
 .text-center {
   text-align: center;
-  /*padding-right: 100%;*/
 }
 
 .text-right {
@@ -187,17 +186,17 @@ blockquote {
 }
 
 .how-to {
-  padding: 40px 20px 24px 20px;
+  padding: 40px 20px 28px 20px;
   color: #f5f5f5;
 }
 
-.card {
-  list-style: none;
-  border-radius: 30px;
-  padding: 20px;
-  margin-bottom: 32px;
+.card-list {
+  list-style-type: none;
 }
-/*задал правила border-radius padding margin-bottom в .card*/
+
+.cards-list-item {
+  list-style-type: none;
+}
 
 .card_theme_dark {
   background: var(--gray-bg, #343434);
@@ -209,6 +208,13 @@ blockquote {
   color: #131313;
 }
 
+.card {
+  border-radius: 30px;
+  padding: 20px;
+  margin-bottom: 32px;
+}
+/*задал правила border-radius padding margin-bottom в .card*/
+
 .card__author-foto {
   border-radius: 50%;
   width: 100px;
@@ -217,14 +223,15 @@ blockquote {
 /*радиус вместо абсолютных значений указан в %, прописаны размеры элементов*/
 
 .card__author-name {
-  padding-top: 8px;
+  padding-top: 7px;
+  padding-bottom: 8px;
   text-align: left;
   color: #f5f5f5;
   font-family: "Interbold", sans-serif;
   font-size: 16px;
   font-style: normal;
   font-weight: 700;
-  line-height: 135%; /* 21.6px */
+  line-height: 100%;
 }
 
 .card__title {
@@ -245,13 +252,14 @@ blockquote {
 }
 
 .footer {
-  display: flex;
   padding: 20px 20px;
+  display: flex;
   border-top: 1px solid var(--yellow-bg, #fee42a);
   justify-content: space-between;
 }
 
 .footer__copy {
+  display: flex;
   color: #f5f5f5;
   font-family: "Inter", sans-serif;
   font-size: 16px;
@@ -264,8 +272,8 @@ blockquote {
   display: flex;
   list-style: none;
   column-gap: 16px;
-  color: #F5F5F5;
-  font-family: Inter;
+  color: #f5f5f5;
+  font-family: "Inter", sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -274,8 +282,8 @@ blockquote {
 
 .footer__links-social-networks {
   text-decoration: none;
-  color: #F5F5F5;
-  font-family: Inter;
+  color: #f5f5f5;
+  font-family: "Inter", sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
