Исправлены замечания ревьюера

--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -37,3 +37,5 @@
     font-weight: 400;
     font-display: swap;
 }
+/*woff2 переместил перед woff.
+Наименования в font-family исправил. Начертания - через font-weight*/
