--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,9 +1,9 @@
 @font-face {
     font-family: 'Inter';
     src: local('Inter'),
-        url(./fonts/interregular.woff2) format('woff2'),
-        url(./fonts/interregular.woff) format('woff'),
-        url(./fonts/interregular.ttf) format ('truetype');
+        url(./interregular.woff2) format('woff2'),
+        url(./interregular.woff) format('woff'),
+        url(./interregular.ttf) format ('truetype');
     font-weight: 400;
     font-display: swap;
 }
@@ -11,9 +11,9 @@
 @font-face {
     font-family: 'Inter';
     src: local('Inter'),
-         url(./fonts/interbold.woff2) format('woff2'),
-         url(./fonts/interbold.woff) format('woff'),
-         url(./fonts/interbold.ttf) format ('truetype');
+         url(./interbold.woff2) format('woff2'),
+         url(./interbold.woff) format('woff'),
+         url(./interbold.ttf) format ('truetype');
     font-weight: 700;
     font-display: swap;
 }
@@ -21,9 +21,9 @@
 @font-face {
     font-family: 'EB Garamond';
     src: local('EB Garamond Medium'),
-         url(./fonts/ebgaramondmedium.woff2) format('woff2'),
-         url(./fonts/ebgaramondmedium.woff) format('woff'),
-         url(./fonts/ebgaramondmedium.ttf) format ('truetype');
+         url(./ebgaramondmedium.woff2) format('woff2'),
+         url(./ebgaramondmedium.woff) format('woff'),
+         url(./ebgaramondmedium.ttf) format ('truetype');
     font-weight: 500;
     font-display: swap;
 }
@@ -31,9 +31,9 @@
 @font-face {
     font-family: 'EB Garamond';
     src: local('EB Garamond'),
-         url(./fonts/ebgaramondregular.woff2) format('woff2'),
-         url(./fonts/ebgaramondregular.woff) format('woff'),
-         url(./fonts/ebgaramondregular.ttf) format ('truetype');
+         url(./ebgamondregular.woff2) format('woff2'),
+         url(./ebgaramondregular.woff) format('woff'),
+         url(./ebgaramondregular.ttf) format ('truetype');
     font-weight: 400;
     font-display: swap;
 }
